test_suite/ui/zero_disciminant.stderr
error: Flags must have exactly one set bit.
 --> $DIR/zero_disciminant.rs:3:12
  |
3 |     Zero = 0,
  |            ^
