test_suite/ui/zero_disciminant.rs
#[derive(Copy, Clone, enumflags2::BitFlags)]
enum Foo {
    Zero = 0,
}

fn main() {}
